--- a/a1/pyproject.toml
+++ b/a1/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^2.2.2"
 numpy = "^2.0.1"
 matplotlib = "^3.9.2"
 seaborn = "^0.13.2"
+scikit-learn = "^1.5.1"
 
 
 [tool.poetry.group.dev.dependencies]
