chore: add dependencies and starter code

--- a/a2/pyproject.toml
+++ b/a2/pyproject.toml
@@ -9,7 +9,14 @@ readme = "README.md"
 python = "^3.12"
 pandas = "^2.2.2"
 numpy = "^2.1.0"
+matplotlib = "^3.9.2"
+seaborn = "^0.13.2"
+scikit-learn = "^1.5.1"
+keras = "^3.5.0"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
