--- a/a2/pyproject.toml
+++ b/a2/pyproject.toml
@@ -13,6 +13,7 @@ matplotlib = "^3.9.2"
 seaborn = "^0.13.2"
 scikit-learn = "^1.5.1"
 keras = "^3.5.0"
+imblearn = "^0.0"
 
 
 [tool.poetry.group.dev.dependencies]
